--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="header">
         <img class="header-logo" src="./images/logo2.png" alt="" srcset="">
         <ul>
-            <li>Random Information</li>
+            <li>Information</li>
             <li>Quotes</li>
             <li>Contact</li>
         </ul>
