--- a/index.html
+++ b/index.html
@@ -12,11 +12,14 @@
 <body>
     <div class="header">
         <img class="header-logo" src="./images/logo2.png" alt="" srcset="">
-        <ul>
-            <li>Information</li>
-            <li>Quotes</li>
-            <li>Contact</li>
-        </ul>
+        <div class="header-container">
+            <ul class="header-links">
+                <li> <a href="">Information</a></li>
+                <li> <a href="">Quotes</a></li>
+                <li> <a href="">Contact</a></li>
+            </ul>
+        </div>
+
     </div>
 </body>
 
