Add hero-main section in index.html and styles for header section in style.css

--- a/index.html
+++ b/index.html
@@ -11,14 +11,21 @@
 
 <body>
     <div class="header">
-        <img class="header-logo" src="./images/logo2.png" alt="" srcset="">
-        <div class="header-container">
+        <div class="header-logo">
+            Header Logo
+        </div>
+        <div class="header-nav">
             <ul class="header-links">
                 <li> <a href="">Information</a></li>
                 <li> <a href="">Quotes</a></li>
                 <li> <a href="">Contact</a></li>
             </ul>
         </div>
+        <div class="hero-main">
+            <h1>This website is awesome</h1>
+        </div>
+
+
 
     </div>
 </body>
