Fix stracture in index.html

--- a/index.html
+++ b/index.html
@@ -10,24 +10,28 @@
 </head>
 
 <body>
-    <div class="header">
-        <div class="header-logo">
-            Header Logo
-        </div>
-        <div class="header-nav">
+    <header>
+        <nav class="header-nav">
+            <span class="header-logo">Header logo</span>
             <ul class="header-links">
-                <li> <a href="">Information</a></li>
-                <li> <a href="">Quotes</a></li>
-                <li> <a href="">Contact</a></li>
+                <li><a href="">header link one</a></li>
+                <li><a href="">header link two</a></li>
+                <li><a href="">header link three</a></li>
             </ul>
-        </div>
+        </nav>
         <div class="hero-main">
-            <h1>This website is awesome</h1>
+            <div class="hero-main-left">
+                <h1 class="hero-main-title">This website is awesome</h1>
+                <p class="hero-main-text">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Velit voluptatibus veniam eveniet nesciunt
+                    dolores inventore, quisquam dignissimos numquam commodi necessitatibus ratione dolorem quos optio
+                    cumque, laboriosam doloremque molestias assumenda sequi.
+                </p>
+                <button class="hero-main-btn">Sing up</button>
+            </div>
+            <img class="main-hero-img" src="" alt="">
         </div>
-
-
-
-    </div>
+    </header>
 </body>
 
 </html>
