Add new section information

--- a/index.html
+++ b/index.html
@@ -32,6 +32,23 @@
             <img class="main-hero-img" src="" alt="">
         </div>
     </header>
+    <section class="information">
+        <h1 class="information-title">Some random information.</h1>
+        <div class="infromation-content">
+            <div class="information-content-item">
+                <img src="" alt="">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+            </div>
+            <div class="information-content-item">
+                <img src="" alt="">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+            </div>
+            <div class="information-content-item">
+                <img src="" alt="">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+            </div>
+        </div>
+    </section>
 </body>
 
 </html>
