Add fixed information section layout in index.html, style for information section in style.css

--- a/index.html
+++ b/index.html
@@ -34,18 +34,26 @@
     </header>
     <section class="information">
         <h1 class="information-title">Some random information.</h1>
-        <div class="infromation-content">
+        <div class="information-content">
             <div class="information-content-item">
-                <img src="" alt="">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                <img class="information-img" src="" alt="">
+                <p class="information-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore cumque eum
+                    nemo suscipit molestiae nulla magni, officiis maiores.</p>
             </div>
             <div class="information-content-item">
-                <img src="" alt="">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                <img class="information-img" src="" alt="">
+                <p class="information-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore cumque eum
+                    nemo suscipit molestiae nulla magni, officiis maiores.</p>
             </div>
             <div class="information-content-item">
-                <img src="" alt="">
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                <img class="information-img" src="" alt="">
+                <p class="information-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore cumque eum
+                    nemo suscipit molestiae nulla magni, officiis maiores.</p>
+            </div>
+            <div class="information-content-item">
+                <img class="information-img" src="" alt="">
+                <p class="information-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore cumque eum
+                    nemo suscipit molestiae nulla magni, officiis maiores.</p>
             </div>
         </div>
     </section>
