Add quotes section

--- a/index.html
+++ b/index.html
@@ -57,6 +57,12 @@
             </div>
         </div>
     </section>
+    <section class="quotes">
+        <p class="quote">End? No, the journey doesn't end here. Death is just another path, one that we all must take.
+            The grey rain-courtain of this world rolls back, and all turns to silver glass, and then you see it. White
+            shores, and beyond, a far green country under a swift sunrise.</p>
+        <h6 class="quote-author">~Gandalf the Grey</h6>
+    </section>
 </body>
 
 </html>
