--- a/index.html
+++ b/index.html
@@ -58,10 +58,14 @@
         </div>
     </section>
     <section class="quotes">
-        <p class="quote">End? No, the journey doesn't end here. Death is just another path, one that we all must take.
-            The grey rain-courtain of this world rolls back, and all turns to silver glass, and then you see it. White
-            shores, and beyond, a far green country under a swift sunrise.</p>
-        <h6 class="quote-author">~Gandalf the Grey</h6>
+        <div class="quotes-container">
+            <p class="quote">End? No, the journey doesn't end here. Death is just another path, one that we all must
+                take.
+                The grey rain-courtain of this world rolls back, and all turns to silver glass, and then you see it.
+                White
+                shores, and beyond, a far green country under a swift sunrise.</p>
+            <h4 class="quote-author">~Gandalf the White</h4>
+        </div>
     </section>
 </body>
 
