Add cta section in index.html and style for cta section in style.css

--- a/index.html
+++ b/index.html
@@ -67,6 +67,15 @@
             <h4 class="quote-author">~Gandalf the White</h4>
         </div>
     </section>
+    <section class="cta">
+        <div class="cta-container">
+            <div class="cta-container-left">
+                <h5 class="cta-title">Call to action! It's time!</h5>
+                <p class="cta-text">Sign up for our product by clicking that button right over there!</p>
+            </div>
+            <button class="cta-container-btn">Sign up</button>
+        </div>
+    </section>
 </body>
 
 </html>
