--- a/index.html
+++ b/index.html
@@ -76,6 +76,9 @@
             <button class="cta-container-btn">Sign up</button>
         </div>
     </section>
+    <footer>
+        <h5 class="footer-text">Copyright © The Odin Project 2022</h5>
+    </footer>
 </body>
 
 </html>
