Delete unused images in images directory, and add image into main-hero-img in index.html

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 </p>
                 <button class="hero-main-btn">Sing up</button>
             </div>
-            <img class="main-hero-img" src="" alt="">
+            <img class="main-hero-img" src="./images/middle-earth-4760561_1920.jpg" alt="">
         </div>
     </header>
     <section class="information">
